added styling fore the figacaption

--- a/styles/site.css
+++ b/styles/site.css
@@ -37,6 +37,11 @@ header,footer {
   position: relative;
   min-width: 100px;
 }
+figcaption{
+  font-size: .7em;
+  opacity: .5;
+  font-style: italic
+}
 
 /*Layout*/
 .cf:after {
