--- a/styles/site.css
+++ b/styles/site.css
@@ -274,7 +274,7 @@ figcaption{
 }
 .projects:after {
   content: "";
-  background: url(http://fc06.deviantart.net/fs70/i/2014/083/9/1/minina_hyperdrive_by_sheldon227-d7bhlqh.png) -122px -55px / cover;
+  /*background: url(http://fc06.deviantart.net/fs70/i/2014/083/9/1/minina_hyperdrive_by_sheldon227-d7bhlqh.png) -122px -55px / cover;*/
   width: 100%;
   height: 100%;
   position: absolute;
@@ -361,7 +361,7 @@ figcaption{
 }
 .about:after {
   content: "";
-  background: url(https://img00.deviantart.net/d486/i/2016/340/c/f/minina_and_her_cyber_beast_droid_by_sheldon227-dapnxoh.png);
+  /*background: url(https://img00.deviantart.net/d486/i/2016/340/c/f/minina_and_her_cyber_beast_droid_by_sheldon227-dapnxoh.png);*/
   background-position: -132px 0px;
   background-size: cover;
   background-repeat: no-repeat;
