add spacing betw\een social media links

--- a/styles/site.css
+++ b/styles/site.css
@@ -127,6 +127,7 @@ figcaption{
     overflow: hidden;
     background-size: 100%;
     text-indent: 100%;
+    margin-right: 5px;
 }
 /*view layout*/
 .view {
