--- a/styles/site.css
+++ b/styles/site.css
@@ -347,6 +347,9 @@ figcaption{
 .projects .main-nav-list li:nth-child(3):hover:after {
   background: url(../images/spa-screenshot.png) 0px -50px / cover;
 }
+.projects .main-nav-list li:nth-child(4):hover:after {
+  background: url(../images/CNS-adaptive-logos.jpg) 0px -50px / cover;
+}
 
 /*Resume Navigation Module*/
 .resume {
