--- a/styles/site.css
+++ b/styles/site.css
@@ -350,6 +350,9 @@ figcaption{
 .projects .main-nav-list li:nth-child(4):hover:after {
   background: url(../images/CNS-adaptive-logos.jpg) 0px -50px / cover;
 }
+.projects .main-nav-list li:nth-child(5):hover:after {
+  background: url(../images/Kyshumu_white-v2.jpg) 0px -50px / cover;
+}
 
 /*Resume Navigation Module*/
 .resume {
