--- a/styles/launch.css
+++ b/styles/launch.css
@@ -1,7 +1,7 @@
 *{
   box-sizing: border-box;
 }
-.body{
+body{
   background:#333;
 }
 
@@ -12,6 +12,11 @@
     width: 630px;
     margin: auto;
     line-height: 1.5;
+}
+.launch h3 {
+    padding: 20px;
+    text-align: center;
+    margin: auto;
 }
 
 .inner-container {
@@ -30,4 +35,13 @@
     background-size: 100%;
     text-indent: 100%;
     margin-right: 5px;
+  background-color:#f2f2f2;
+  border-radius:50%
+}
+.launch{
+  text-align:center
+}
+.launch a.footer, launch .footer{
+  color:#f2f2f2;
+  font-size:15px
 }
