--- a/styles/launch.css
+++ b/styles/launch.css
@@ -44,7 +44,7 @@ body{
 .launch .footer{
   text-align:center
 }
-.launch a, launch .footer{
+.launch a, .launch .footer{
   color:#f2f2f2;
   font-size:15px;
   text-decoration: underline
