--- a/styles/launch.css
+++ b/styles/launch.css
@@ -4,7 +4,9 @@
 body{
   background:#333;
 }
-
+.center{
+  text-align:center
+}
 .container.launch {
     background: #365b87;
     color: #f2f2f2;
@@ -12,6 +14,9 @@ body{
     width: 630px;
     margin: auto;
     line-height: 1.5;
+}
+.launch h2{
+  margin bottom
 }
 .launch h3 {
     padding: 20px;
@@ -26,8 +31,8 @@ body{
     padding: 15px 50px;
     font-size: 22px;
 }
-.social{
-  text-align:center
+.social h4{
+  margin-bottom: 10px
 }
 .social-link {
     border: 5px solid #ccc;
@@ -41,9 +46,7 @@ body{
   background-color:#f2f2f2;
   border-radius:50%
 }
-.launch .footer{
-  text-align:center
-}
+
 .launch a, .launch .footer{
   color:#f2f2f2;
   font-size:15px;
