--- a/styles/launch.css
+++ b/styles/launch.css
@@ -33,7 +33,8 @@ body{
     background-repeat: no-repeat;
 }
 .inner-container {
-    background: #333;
+    background: #f2f2f2;
+  color:#222;
     margin: 5px;
     border-radius: 15px;
     padding: 15px 50px;
