Add overflow hidden to the main container

--- a/styles/launch.css
+++ b/styles/launch.css
@@ -31,6 +31,7 @@ body{
     text-indent: -220%;
     background-size: contain;
     background-repeat: no-repeat;
+  overflow: hidden;
 }
 .inner-container {
     background: #f2f2f2;
